PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.14

- Core:
  . Fixded bug #72736 (Slow performance when fetching large dataset with mysqli
    / PDO). (Dmitry)

10 Nov 2016 PHP 7.0.13

- Core:
  . Fixed bug #73350 (Exception::__toString() cause circular references).
    (Laruence)
  . Fixed bug #73181 (parse_str() without a second argument leads to crash).
    (Nikita)
  . Fixed bug #66773 (Autoload with Opcache allows importing conflicting class
    name to namespace). (Nikita)
  . Fixed bug #66862 ((Sub-)Namespaces unexpected behaviour). (Nikita)
  . Fix pthreads detection when cross-compiling (ffontaine)
  . Fixed bug #73337 (try/catch not working with two exceptions inside a same
    operation). (Dmitry)
  . Fixed bug #73338 (Exception thrown from error handler causes valgrind
    warnings (and crashes)). (Bob, Dmitry)
  . Fixed bug #73329 ((Float)"Nano" == NAN). (Anatol)

- GD:
  . Fixed bug #73213 (Integer overflow in imageline() with antialiasing). (cmb)
  . Fixed bug #73272 (imagescale() is not affected by, but affects
    imagesetinterpolation()). (cmb)
  . Fixed bug #73279 (Integer overflow in gdImageScaleBilinearPalette()). (cmb)
  . Fixed bug #73280 (Stack Buffer Overflow in GD dynamicGetbuf). (cmb)

- OCI8
  . Fixed bug #71148 (Bind reference overwritten on PHP 7). (Oracle Corp.)

- phpdbg:
  . Properly allow for stdin input from a file. (Bob)
  . Add -s command line option / stdin command for reading script from stdin.
    (Bob)
  . Ignore non-executable opcodes in line mode of phpdbg_end_oplog(). (Bob)
  . Fixed bug #70776 (Simple SIGINT does not have any effect with -rr). (Bob)
  . Fixed bug #71234 (INI files are loaded even invoked as -n --version). (Bob)

- Session:
  . Fixed bug #73273 (session_unset() empties values from all variables in which
    is $_session stored). (Nikita)

- SOAP: